# c-minus-compiler

./: .gitignore  AST.c  AST.h  AST.txt  CMakeLists.txt  README.md  a.out  asmBuilder.cpp  asmBuilder.h  cminus.l  cminus.sh  cminus.y  cminus_new.y  emitcode.c  emitcode.cpp  emitcode.h  global.h  lex.yy.c  main.cpp  output.asm  symTable.cpp  symTable.h  test.c  y.tab.c  y.tab.h
include/: AST.h  asmBuilder.h  emitcode.h  global.h  symTable.h  y.tab.h
lex_yacc/: cminus.l  cminus.y  cminus_new.y
res/: loop  loop.asm  recurse  recurse.asm
src/: AST.c  asmBuilder.cpp  emitcode.cpp  lex.yy.c  main.cpp  symTable.cpp  y.tab.c
test/: declared_error.c  foo_arr_inf_error.c  initialized_error.c  loop.c  param_error.c  recurse.c  symTable  test.asm  test.c
